[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/Pixel.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Sprites/background.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Difficulty Selection.gd" type="Script" id=4]
[ext_resource path="res://Sprites/Button.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 75
font_data = ExtResource( 1 )

[node name="Difficulty Selection" type="Node2D"]
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -122.0
margin_top = -54.0
margin_right = 1182.0
margin_bottom = 656.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Easy" type="TextureButton" parent="." groups=[
"diff",
]]
margin_left = 79.0
margin_top = 63.0
margin_right = 943.0
margin_bottom = 201.0
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Easy"]
margin_left = 43.0
margin_top = 19.0
margin_right = 826.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.141176, 0.133333, 0.203922, 1 )
text = "EASY"
align = 1
valign = 1

[node name="Moderate" type="TextureButton" parent="." groups=[
"diff",
]]
margin_left = 78.1182
margin_top = 223.167
margin_right = 942.118
margin_bottom = 361.167
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Moderate"]
margin_left = 43.0
margin_top = 19.0
margin_right = 826.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.141176, 0.133333, 0.203922, 1 )
text = "MODERATE"
align = 1
valign = 1

[node name="Unbeatable" type="TextureButton" parent="." groups=[
"diff",
]]
margin_left = 79.5558
margin_top = 385.56
margin_right = 943.556
margin_bottom = 523.56
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Unbeatable"]
margin_left = 43.0
margin_top = 19.0
margin_right = 826.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.141176, 0.133333, 0.203922, 1 )
text = "UNBEATABLE?"
align = 1
valign = 1
[connection signal="pressed" from="Easy" to="." method="_on_Easy_pressed"]
[connection signal="pressed" from="Moderate" to="." method="_on_Moderate_pressed"]
[connection signal="pressed" from="Unbeatable" to="." method="_on_Unbeatable_pressed"]
